--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
 
 <body>
 
-    <header class="header">
+    <header class="header fixed-top">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="logo mt-4 text-center">
+                    <div class="logo mt-2 text-center">
                         <a href="#" class="logo-link">
                             <img src="./images/pink logo 1.svg" class="logo-img" alt="Logo">
                         </a>
@@ -32,19 +32,14 @@
         <div class="container">
             <div class="row menu-main d-flex align-items-center justify-content-around">
                 <div
-                    class="col-md-5 col-lg-4 mt-3 d-flex align-items-center justify-content-around justify-content-md-between">
+                    class="col-md-5 col-lg-4 d-flex align-items-center justify-content-around justify-content-md-between">
                     <div class="raffle text-center">
-                        <a href="#" class="raffle-link">
+                        <a href="#" class="raffle-link p-3">
                             щорічний розіграш
                             100м<sup>2</sup> інтер'єру
                         </a>
                     </div>
-                    <div class="lang">
-                        <select name="" id="">
-                            <option value="ua">ua</option>
-                            <option value="ua">ru</option>
-                        </select>
-                    </div>
+                    
                 </div>
                 <div class="col-md-8 col-lg-6 d-flex justify-content-end">
                     <nav class="menu d-flex align-items-center justify-content-between">
@@ -55,14 +50,22 @@
                             знайомство
                         </a>
 
-                        <a class="menu__link menu__link-border text-right px-3" href="#">
+                        <a class="menu__link menu__link-border text-right p-3" href="#">
                             калькулятор
                             <span>
                                 ремонту
                             </span>
                         </a>
 
+                        <div class="lang ml-4">
+                            <select name="" id="">
+                                <option value="ua">ua</option>
+                                <option value="ua">ru</option>
+                            </select>
+                        </div>
+
                     </nav>
+                    
                     <nav class="menu-mobile">
                         <input type="checkbox" id="nav" class="hidden">
                         <label for="nav" class="nav-btn">
@@ -97,6 +100,32 @@
             </div>
         </div>
     </header>
+
+
+    <section class="origin mt-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="origin-block text-center">
+                        <h1 class="">
+                            Natali Hubysh
+                        </h1>
+                        <p class="text-uppercase">
+                            Interior Designer
+                        </p>
+                        <div class="text-center">
+                            Створюємо простір, де хочеться жити, відпочивати і працювати
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+            </div>
+        </div>
+    </section>
+
+
 
     <section class="promo mt-3">
         <div class="container-fluid">
