--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="logo mt-2 text-center">
-                        <a href="#" class="logo-link">
+                        <a href="#" class="logo-link ">
                             <img src="./images/pink logo 1.svg" class="logo-img" alt="Logo">
                         </a>
                     </div>
@@ -39,7 +39,7 @@
                             100м<sup>2</sup> інтер'єру
                         </a>
                     </div>
-                    
+
                 </div>
                 <div class="col-md-8 col-lg-6 d-flex justify-content-end">
                     <nav class="menu d-flex align-items-center justify-content-between">
@@ -65,7 +65,7 @@
                         </div>
 
                     </nav>
-                    
+
                     <nav class="menu-mobile">
                         <input type="checkbox" id="nav" class="hidden">
                         <label for="nav" class="nav-btn">
@@ -119,15 +119,65 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt-5 ml-5 d-flex justify-content-between align-items-end">
+                <div class="col-lg-2">
+                    <div class="social-lists mt-5">
+                        <p>
+                            <a href="">
+                                <img src="images/instagram-icon.svg" alt="">
+                            </a>
+                        </p>
+                        <p class="mt-5">
+                            <a href="">
+                                <img src="images/instagram-icon.svg" alt="">
+                            </a>
+                        </p>
+                        <p class="mt-5">
+                            <a href="">
+                                <img src="images/instagram-icon.svg" alt="">
 
+                            </a>
+                        </p>
+                        <p class="mt-5">
+                            <a href="">
+                                <img src="images/instagram-icon.svg" alt="">
+
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 d-flex justify-content-center">
+                    <a href="#down" class="down-block text-center">
+                        <img class="down-block__img" src="images/mouse.svg" alt="mouse">
+                        <p>
+                            Дивитись далі
+                        </p>
+                    </a>
+                </div>
+
+                <div class="col-lg-2 pt-3">
+                    <div class="contacts d-flex d-lg-block justify-content-center align-items-center">
+                        <div class="tel d-flex align-items-center justify-content-start pb-2 pr-5">
+                            <img src="images/Vector.svg" alt="Call" class="pr-3">
+                            <a href="tel:+3809584832" class="text-decoration-none">
+                                +3809584832
+                            </a>
+                        </div>
+                        <div class="post mt-3 d-flex align-items-center justify-content-start">
+                            <img src="images/Group.svg" alt="Mail" class="pr-3">
+                            <a href="mailto:Alina@gmail.com" class="text-decoration-none">
+                                Alina@gmail.com
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
 
 
-    <section class="promo mt-3">
+    <section class="promo" >
         <div class="container-fluid">
             <div class="row justify-content-center d-flex flex-wrap">
 
@@ -400,7 +450,9 @@
                             Contact
                         </h3>
                         <p class="contact-about__desc">
-                            Лідер компанії-Наталія Губиш. Маючи великий досвід виконання житлових та громадських проектів різної складності, саме вона контролює роботу від зародження ідеї до задачі замовнику
+                            Лідер компанії-Наталія Губиш. Маючи великий досвід виконання житлових та громадських
+                            проектів різної складності, саме вона контролює роботу від зародження ідеї до задачі
+                            замовнику
                         </p>
                         <img src="images/Map.png" alt="Map">
                     </div>
@@ -412,7 +464,8 @@
                                 Brif
                             </h3>
                             <p class="contact-brif__desc">
-                                Бриф (від англ. brief) — це угода між готовими до співпрацісторонами, у якій прописані та враховані всі основні параметри. Вона допоможе нам зрозуміти що потрібно саме вам.
+                                Бриф (від англ. brief) — це угода між готовими до співпрацісторонами, у якій прописані
+                                та враховані всі основні параметри. Вона допоможе нам зрозуміти що потрібно саме вам.
                             </p>
                         </div>
                         <div class="video">
@@ -424,14 +477,19 @@
             <div class="row pt-5 pb-5">
                 <div class="col-lg-12">
                     <p class="about-me">
-                        Мене оточують прекрасні і талановиті люди. Кожен день збуваються мої мрії і я стаю на крок ближче до усвідомлення себе. Мій дизайн - це мій світ, де людина повинна жити з душею, робити все від серця. Я вдячна вищим силам, за можливість жити своєю справою - творити коден день, отримуючи від цього заряд колосальної енергії сподіваючись, що частинка її передасться і вам, коли ви познайомитеся з моїми роботами, тому що кожен з нас - творець, дизайнер і архітектор свого життя незалежно від роду діяльності.
+                        Мене оточують прекрасні і талановиті люди. Кожен день збуваються мої мрії і я стаю на крок
+                        ближче до усвідомлення себе. Мій дизайн - це мій світ, де людина повинна жити з душею, робити
+                        все від серця. Я вдячна вищим силам, за можливість жити своєю справою - творити коден день,
+                        отримуючи від цього заряд колосальної енергії сподіваючись, що частинка її передасться і вам,
+                        коли ви познайомитеся з моїми роботами, тому що кожен з нас - творець, дизайнер і архітектор
+                        свого життя незалежно від роду діяльності.
                     </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="footer pb-3">
+    <footer class="footer pb-3" id="down">
         <div class="container">
             <div class="row d-flex justify-content-between align-items-center">
                 <div class="col-lg-2 pt-3">
