--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header class="header fixed-top">
+    <header class="header">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
@@ -103,7 +103,7 @@
 
 
     <section class="origin mt-5">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="origin-block text-center">
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 ml-5 d-flex justify-content-between align-items-end">
+            <div class="row mt-5 d-flex justify-content-lg-between align-items-end">
                 <div class="col-lg-2">
                     <div class="social-lists mt-5">
                         <p>
@@ -149,7 +149,7 @@
                 <div class="col-lg-3 d-flex justify-content-center">
                     <a href="#down" class="down-block text-center">
                         <img class="down-block__img" src="images/mouse.svg" alt="mouse">
-                        <p>
+                        <p class="mt-2">
                             Дивитись далі
                         </p>
                     </a>
@@ -164,7 +164,7 @@
                             </a>
                         </div>
                         <div class="post mt-3 d-flex align-items-center justify-content-start">
-                            <img src="images/Group.svg" alt="Mail" class="pr-3">
+                            <img src="images/post.svg" alt="Mail" class="pr-3">
                             <a href="mailto:Alina@gmail.com" class="text-decoration-none">
                                 Alina@gmail.com
                             </a>
@@ -177,13 +177,13 @@
 
 
 
-    <section class="promo" >
-        <div class="container-fluid">
+    <section class="promo mt-5" >
+        <div class="container">
             <div class="row justify-content-center d-flex flex-wrap">
 
                 <div class="col-md-6 col-lg-6 d-flex align-items-start justify-content-between">
                     <div data-help="log1" class="promo-pic align-items-start">
-                        <img class="promo-img" src="images/Photo 1.png">
+                        <img class="promo-img" src="images/Rectangle 8.png">
                         <div id="log1" class="help d-flex justify-content-end">
                             <div class="houses text-center">
                                 <h3>
@@ -200,12 +200,6 @@
                         </div>
 
                     </div>
-                    <!-- <div class="promo-description">
-                        <p>
-                            Какой-то текст который должен быть в блоке<br>
-                        </p> 
-                        <a href="#">Интересная ссылка</a>
-                    </div> -->
                 </div>
 
                 <div class="col-md-6 col-lg-6 d-flex align-items-center justify-content-end">
@@ -234,7 +228,7 @@
             <div class="row mt-5 mb-5 justify-content-between">
                 <div class="col-md-6 d-flex align-items-start justify-content-between">
 
-                    <div data-house="log3" class="promo-pic align-items-start">
+                    <div data-house="log3" class="promo-pic promo-pic-span align-items-start">
                         <img class="promo-img" src="images/Photo 1.png">
                         <div id="log3" class="house active d-flex justify-content-end">
                             <div class="houses text-center">
@@ -278,12 +272,11 @@
         </div>
     </section>
 
-    <section class="about mb-5">
+    <!-- <section class="about mb-5">
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <img src="images/BG.png" alt="">
-
 
                     <div class="wrapper p-3">
                         <h1 class="text-left">
@@ -308,11 +301,13 @@
                     Slide 3
                 </div>
             </div>
-            <!-- Add Arrows -->
+            
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
-    </section>
+    </section> -->
+
+
 
 
     <section class="process mb-5 mx-4">
@@ -441,7 +436,16 @@
         </div>
     </section>
 
-    <section class="contact ">
+    <section class="contact">
+        <div class="container">
+            <div class="row">
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- <section class="contact ">
         <div class="container ">
             <div class="row d-flex justify-content-between align-items-end contact-wrapper">
                 <div class="col-lg-4 pt-5 contact-wrap">
@@ -487,7 +491,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer class="footer pb-3" id="down">
         <div class="container">
@@ -501,7 +505,7 @@
                             </a>
                         </div>
                         <div class="post d-flex align-items-center justify-content-start">
-                            <img src="images/Group.svg" alt="Mail" class="pr-3">
+                            <img src="images/post.svg" alt="Mail" class="pr-3">
                             <a href="mailto:Alina@gmail.com">
                                 Alina@gmail.com
                             </a>
