--- a/src/index.html
+++ b/src/index.html
@@ -130,18 +130,18 @@
                         </p>
                         <p class="mt-5">
                             <a href="">
-                                <img src="images/instagram-icon.svg" alt="">
+                                <img src="images/Facebok.svg" alt="">
                             </a>
                         </p>
                         <p class="mt-5">
                             <a href="">
-                                <img src="images/instagram-icon.svg" alt="">
+                                <img src="images/behance.svg" alt="">
 
                             </a>
                         </p>
                         <p class="mt-5">
                             <a href="">
-                                <img src="images/instagram-icon.svg" alt="">
+                                <img src="images/youtube.svg" alt="">
 
                             </a>
                         </p>
@@ -165,7 +165,7 @@
                             </a>
                         </div>
                         <div class="post mt-3 d-flex align-items-center justify-content-start">
-                            <img src="images/post.svg" alt="Mail" class="pr-3">
+                            <img src="images/Post.svg" alt="Mail" class="pr-3">
                             <a href="mailto:Alina@gmail.com" class="text-decoration-none">
                                 Alina@gmail.com
                             </a>
@@ -178,7 +178,7 @@
 
 
 
-    <section class="promo mt-5">
+    <section class="promo pt-5" id="down">
         <div class="container">
             <div class="row justify-content-center d-flex flex-wrap">
 
