--- a/src/index.html
+++ b/src/index.html
@@ -206,7 +206,7 @@
                 <div class="col-md-6 col-lg-6 d-flex align-items-center justify-content-end">
 
                     <div data-help="log2" class="promo-pic">
-                        <div id="log2" class="help active help-two">
+                        <div id="log2" class="help help-two active help-two">
                             <div class="houses text-center">
                                 <h3>
                                     Квартири
@@ -231,7 +231,7 @@
 
                     <div data-house="log3" class="promo-pic promo-pic-span align-items-start">
                         <img class="promo-img" src="images/Photo 1.png">
-                        <div id="log3" class="house active d-flex justify-content-end">
+                        <div id="log3" class="house house-tw active d-flex justify-content-end">
                             <div class="houses text-center">
                                 <h3>
                                     Будинки
@@ -252,7 +252,7 @@
                 <div class="col-md-6 d-flex align-items-center justify-content-end">
 
                     <div data-house="log4" class="promo-pic">
-                        <div id="log4" class="house house-two">
+                        <div id="log4" class="house house-two house-th">
                             <div class="houses text-center">
                                 <h3>
                                     Квартири
