--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <header class="header">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="logo mt-2 text-center">
@@ -33,16 +33,16 @@
         <div class="container">
             <div class="row menu-main d-flex align-items-center justify-content-around">
                 <div
-                    class="col-md-5 col-lg-4 d-flex align-items-center justify-content-around justify-content-md-between">
+                    class="col-md-12 justify-content-md-center col-lg-5 d-flex align-items-center justify-content-around">
                     <div class="raffle text-center">
-                        <a href="#" class="raffle-link p-3">
+                        <a href="#" class="raffle-link p-1">
                             щорічний розіграш
                             100м<sup>2</sup> інтер'єру
                         </a>
                     </div>
 
                 </div>
-                <div class="col-md-8 col-lg-6 d-flex justify-content-end">
+                <div class="col-md-12 justify-content-md-center col-lg-6 d-flex justify-content-end">
                     <nav class="menu d-flex align-items-center justify-content-between">
                         <a class="menu__link" href="#">
                             проекти
@@ -51,7 +51,7 @@
                             знайомство
                         </a>
 
-                        <a class="menu__link menu__link-border text-right p-3" href="#">
+                        <a class="menu__link menu__link-border text-right p-md-1 p-lg-1" href="#">
                             калькулятор
                             <span>
                                 ремонту
@@ -103,12 +103,12 @@
     </header>
 
 
-    <section class="origin mt-5">
+    <section class="origin">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="origin-block text-center">
-                        <h1 class="">
+                        <h1>
                             Natali Hubysh
                         </h1>
                         <p class="text-uppercase">
@@ -120,9 +120,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 d-flex justify-content-lg-between align-items-end">
+            <div class="row d-flex justify-content-lg-between align-items-end">
                 <div class="col-lg-2">
-                    <div class="social-lists mt-5">
+                    <div class="social-lists mt-5 text-center d-none d-lg-block">
                         <p>
                             <a href="">
                                 <img src="images/instagram-icon.svg" alt="">
@@ -147,7 +147,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3 d-flex justify-content-center">
+                <div class="col-lg-2 down-wrapper offset-lg-1 d-flex justify-content-center">
                     <a href="#down" class="down-block text-center">
                         <img class="down-block__img" src="images/mouse.svg" alt="mouse">
                         <p class="mt-2">
@@ -156,15 +156,15 @@
                     </a>
                 </div>
 
-                <div class="col-lg-2 pt-3">
-                    <div class="contacts d-flex d-lg-block justify-content-center align-items-center">
-                        <div class="tel d-flex align-items-center justify-content-start pb-2 pr-5">
+                <div class="col-lg-3">
+                    <div class="contacts d-none d-lg-block justify-content-center align-items-center">
+                        <div class="tel d-flex align-items-center justify-content-center pb-2">
                             <img src="images/Vector.svg" alt="Call" class="pr-3">
                             <a href="tel:+3809584832" class="text-decoration-none">
                                 +3809584832
                             </a>
                         </div>
-                        <div class="post mt-3 d-flex align-items-center justify-content-start">
+                        <div class="post mt-3 d-flex align-items-center justify-content-center">
                             <img src="images/Post.svg" alt="Mail" class="pr-3">
                             <a href="mailto:Alina@gmail.com" class="text-decoration-none">
                                 Alina@gmail.com
@@ -439,8 +439,8 @@
 
     <section class="contact mt-5 mb-5">
         <div class="container ">
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-4">
+            <div class="row contact-block d-flex justify-content-lg-center">
+                <div class="col-lg-4 contact-wrap">
                     <div class="avatar">
                         <img src="images/Natalya.png" alt="Natalya">
                         <div class="about-me">
@@ -455,7 +455,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 about-block">
                     <div class="about-natalya">
                         <h4>
                             Лідер компанії - Наталія Губиш.
@@ -535,29 +535,29 @@
                     </p>
                 </div>
             </div>
-            <div class="row main-brif d-flex justify-content-center">
-                <div class="col-lg-11 m-auto d-flex justify-content-center">
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-11 main-brif m-auto d-flex justify-content-center">
                     <div class="brif-wrapper">
-                        <form class="main-brif-form d-flex justify-content-center flex-wrap p-5">
+                        <form class="main-brif-form d-flex flex-wrap px-5 py-5">
                             <div class="left-block">
                                 <p class="mb-2">
                                     Яка послуга вас цікавить?
                                 </p>
                                 <div class="choose-block  ">
                                     <div>
-                                        <input type="checkbox" id="chk" />
+                                        <input type="checkbox" id="chk" class="inp-check" />
                                         <label for="chk" class="mt-3">
                                             Інтер'єр: квартири, будинку, громадського приміщення 
                                         </label>
                                     </div>
                                     <div>
-                                        <input type="checkbox" id="chk2" />
+                                        <input type="checkbox" id="chk2" class="inp-check" />
                                         <label for="chk2" class="mt-3">
                                             Архітектура: однородинний будинок, фасад, ландшафт, реконструкція
                                         </label>
                                     </div>
                                     <div>
-                                        <input type="checkbox" id="chk3" />
+                                        <input type="checkbox" id="chk3" class="inp-check" />
                                         <label for="chk3" class="mt-3">
                                             Консалтинг
                                         </label>
@@ -590,19 +590,19 @@
                                 </p>
                                 <div class="choose-block ">
                                     <div class="mb-3">
-                                        <input type="checkbox" id="chk4" />
+                                        <input type="checkbox" id="chk4" class="inp-check" />
                                         <label for="chk4" class="">
                                             На вчора (майстри вже на об'єкті)
                                         </label>
                                     </div>
                                     <div class="mb-3">
-                                        <input type="checkbox" id="chk5" />
+                                        <input type="checkbox" id="chk5" class="inp-check" />
                                         <label for="chk5" class="">
                                             Є чіткі терміни
                                         </label>
                                     </div>
                                     <div class="mb-3">
-                                        <input type="checkbox" id="chk6" />
+                                        <input type="checkbox" id="chk6" class="inp-check" />
                                         <label for="chk6" class="">
                                             Не спішно
                                         </label>
