--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
 
 
     <section class="origin">
-        <div class="container">
+        <div class="container origin-bottom">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="origin-block text-center">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-lg-between align-items-end">
+            <div class="row grap  d-flex justify-content-lg-between align-items-end">
                 <div class="col-lg-2">
                     <div class="social-lists mt-5 text-center d-none d-lg-block">
                         <p>
@@ -180,9 +180,9 @@
 
     <section class="promo pt-5" id="down">
         <div class="container">
-            <div class="row justify-content-center d-flex flex-wrap">
+            <div class="row projects-lists justify-content-center  d-flex flex-wrap">
 
-                <div class="col-md-6 col-lg-6 d-flex align-items-start justify-content-between">
+                <div class="col-md-6 projects-item col-lg-6 d-flex align-items-start justify-content-between">
                     <div data-help="log1" class="promo-pic align-items-start">
                         <img class="promo-img" src="images/Rectangle 8.png">
                         <div id="log1" class="help d-flex justify-content-end">
@@ -226,8 +226,8 @@
                 </div>
             </div>
 
-            <div class="row mt-5 mb-5 justify-content-between">
-                <div class="col-md-6 d-flex align-items-start justify-content-between">
+            <div class="row projects-lists mt-5 mb-5 justify-content-between">
+                <div class="col-md-6 projects-item d-flex align-items-start justify-content-between">
 
                     <div data-house="log3" class="promo-pic promo-pic-span align-items-start">
                         <img class="promo-img" src="images/Photo 1.png">
@@ -441,7 +441,7 @@
         <div class="container ">
             <div class="row contact-block d-flex justify-content-lg-center">
                 <div class="col-lg-4 contact-wrap">
-                    <div class="avatar">
+                    <div class="avatar text-md-center text-lg-left">
                         <img src="images/Natalya.png" alt="Natalya">
                         <div class="about-me">
                             <div>
@@ -456,7 +456,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 about-block">
-                    <div class="about-natalya">
+                    <div class="about-natalya text-center">
                         <h4>
                             Лідер компанії - Наталія Губиш.
                         </h4>
