--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                         <div class="col-md-12">
                             <div class="logo mt-2 text-center">
                                 <a href="#" class="logo-link ">
-                                    <img src="./images/pink logo 1.svg" class="logo-img" alt="Logo">
+                                    <img src="./images/pink logo 1.svg" class="img-fluid logo-img" alt="Logo">
                                 </a>
                             </div>
                         </div>
@@ -320,7 +320,7 @@
                                         </p>
                                         <a href="house.html" target="_blank" class="watch">
                                             Watch it
-                                            <img src="images/arrow.svg" alt="arrow">
+                                            <img class="ml-3 img-fluid" src="images/arrow.svg" alt="arrow">
                                         </a>
                                     </div>
                                 </div>
@@ -587,7 +587,7 @@
                             <div class="brif-wrapper">
                                 <form class="main-brif-form d-flex flex-wrap px-5 py-5">
                                     <div class="row row-form  d-flex justify-content-between">
-                                        <div class="col-md-5 col-lg-5">
+                                        <div class="col-12 col-md-5 col-lg-5">
                                             <div class="left-block">
                                                 <p class="mb-2">
                                                     Яка послуга вас цікавить?
@@ -689,18 +689,18 @@
                     </div>
                 </div>
             </section>
-            <footer class="footer pb-3" id="down">
+            <footer class="footer pb-5" id="down">
                 <div class="container">
                     <div class="row d-flex justify-content-between align-items-center">
                         <div class="col-lg-2 pt-3">
-                            <div class="contacts d-flex mt-3 mt-lg-0 d-lg-block justify-content-center align-items-center">
+                            <div class="contacts flex-column flex-lg-row d-flex mt-3 mt-lg-0  d-lg-block justify-content-center align-items-center">
                                 <div class="tel d-flex align-items-center justify-content-start pb-2 pr-5">
                                     <img src="images/Vector.svg" alt="Call" class="pr-3">
                                     <a href="tel:+3809584832">
                                         +3809584832
                                     </a>
                                 </div>
-                                <div class="post d-flex align-items-center justify-content-start">
+                                <div class="post mt-3 d-flex align-items-center justify-content-start">
                                     <img src="images/post.svg" alt="Mail" class="pr-3">
                                     <a href="mailto:Alina@gmail.com">
                                         Alina@gmail.com
